11-oidc-keycloak/keycloak/keycloak-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-virtualservice
  namespace: keycloak
spec:
  hosts:
  - "keycloak.127.0.0.1.nip.io"
  gateways:
  - keycloak-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: keycloak-svc.keycloak.svc.cluster.local
        port:
          number: 8080
